--- a/Views/Nhanvien/Index.cshtml
+++ b/Views/Nhanvien/Index.cshtml
@@ -140,7 +140,12 @@
             i.classList.remove("active")
         }
     })
-
+    var Toast = Swal.mixin({
+        toast: true,
+        position: 'top-end',
+        showConfirmButton: false,
+        timer: 3000
+    });
     //Call server get data
     $(document).ready(function () {
         GetAllChucVu();
@@ -175,13 +180,28 @@
                         async: false,
                         url: "@Url.Action("SuaNhanVien", "Nhanvien")",
                         success: function (data) {
-                            $('#modal-default').modal('toggle');
-                            $('#modalForm').find('input').val("");
-                            $("#maCV").html("")
-                            $("#gioiTinh").html("")
-                            GetAll();
+                            if (data.success) {
+                                Toast.fire({
+                                    icon: 'success',
+                                    title: data.message
+                                })
+                                $('#modal-default').modal('toggle');
+                                $('#modalForm').find('input').val("");
+                                $("#maCV").html("")
+                                $("#gioiTinh").html("")
+                                GetAll();
+                            } else {
+                                Toast.fire({
+                                    icon: 'error',
+                                    title: data.message
+                                })
+                            }
                         },
                         error: function () {
+                            Toast.fire({
+                                icon: 'error',
+                                title: data.message
+                            })
                             $('#modalForm').find('input').val("");
                             $("#maCV").html("")
                             $("#gioiTinh").html("")
@@ -199,13 +219,28 @@
                         async: false,
                         url: "@Url.Action("LuuNhanVien", "Nhanvien")",
                         success: function (data) {
-                            $('#modal-default').modal('toggle');
-                            $('#modalForm').find('input').val("");
-                            $("#maCV").html("")
-                            $("#gioiTinh").html("")
-                            GetAll();
+                            if (data.success) {
+                                Toast.fire({
+                                    icon: 'success',
+                                    title: data.message
+                                })
+                                $('#modal-default').modal('toggle');
+                                $('#modalForm').find('input').val("");
+                                $("#maCV").html("")
+                                $("#gioiTinh").html("")
+                                GetAll();
+                            } else {
+                                Toast.fire({
+                                    icon: 'error',
+                                    title: data.message
+                                })
+                            }
                         },
                         error: function () {
+                            Toast.fire({
+                                icon: 'error',
+                                title: data.message
+                            })
                             $('#modalForm').find('input').val("");
                             $("#maCV").html("")
                             $("#gioiTinh").html("")
@@ -274,9 +309,25 @@
                                     data: { id: id },
                                     url: "@Url.Action("XoaNhanVien", "Nhanvien")",
                                     success: function (data) {
+                                        if (data.success) {
+                                            Toast.fire({
+                                                icon: 'success',
+                                                title: data.message
+                                            })
+                                        } else {
+                                            Toast.fire({
+                                                icon: 'error',
+                                                title: data.message
+                                            })
+                                        }
                                         GetAll();
+
                                     },
                                     error: function () {
+                                        Toast.fire({
+                                            icon: 'error',
+                                            title: data.message
+                                        })
                                         GetAll();
                                     }
                                 });
