--- a/Views/Shared/_CustomerLayout.cshtml
+++ b/Views/Shared/_CustomerLayout.cshtml
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
     <link rel="icon" type="image/x-icon" href="~/customer/images/logo.png">
+    <script src="~/adminlte/plugins/jquery/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <link rel="stylesheet" href="~/adminlte/plugins/jquery-ui/jquery-ui.min.css" />
+    <script src="~/adminlte/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <!-- mustache -->
+    <script type='text/javascript' src='~/adminlte/plugins/jquery-mustache/mustache.min.js'></script>
+    <script type='text/javascript' src="~/adminlte/plugins/jquery-mustache/jquery.mustache.min.js"></script>
+    <script type="text/javascript" src="~/adminlte/dist/js/ui.common.js"></script>
     @RenderSection("styles", required: false)
 </head>
 <body>
