--- a/wwwroot/Template/tpl_phieudatphong.html
+++ b/wwwroot/Template/tpl_phieudatphong.html
@@ -25,13 +25,13 @@
                 <td class="ngayNhanPhong">{{ngayNhanPhong}}</td>
                 <td class="ngayTraPhong">{{ngayTraPhong}}</td>
                 <td class="tongTien">{{tongTien}}</td>
-                <td width="100px">
+                <td style="display: flex;justify-content: center;">
                     <button id="edit_{{id}}" class="btnEdit btn btn-info btn-sm" title="Chỉnh sửa chức vụ">
                         <i class="fas fa-edit"></i>
                     </button>
-                    <button id="delete_{{id}}" class="btnDelete btn btn-danger btn-sm" title="Xóa chức vụ">
+                    <!--<button id="delete_{{id}}" class="btnDelete btn btn-danger btn-sm" title="Xóa chức vụ">
                         <i class="fas fa-times"></i>
-                    </button>
+                    </button>-->
                 </td>
             </tr>
             {{/data}}
