--- a/wwwroot/Template/tpl_phieudatphong_popup.html
+++ b/wwwroot/Template/tpl_phieudatphong_popup.html
@@ -26,12 +26,27 @@
                     <input type="text" placeholder="Chọn ngày trả phòng" name="ngayTraPhong" class="form-control" id="ngayTraPhong" />
                 </div>
             </div>
-            <div class="col-md-12">
+
+            <div class="col-md-7">
+                <div class="form-group">
+                    <label for="tencv">Dịch vụ</label>
+                    <input type="hidden" id="idDatDichVu" name="idDatDichVu">
+                    <select name="maDV" class="form-control" id="maDV"></select>
+                </div>
+            </div>
+
+            <div class="col-md-5">
+                <div class="form-group">
+                    <label for="tencv">Số lượng dịch vụ</label>
+                    <input type="text" placeholder="Nhập số lượng" name="soLuong" class="form-control" id="soLuong" />
+                </div>
+            </div>
+            <!--<div class="col-md-12">
                 <div class="form-group">
                     <label for="tencv">Tổng tiền</label>
                     <input type="text" name="tongTien" class="form-control" id="tongTien" placeholder="Nhập tổng tiền" />
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </script>
